Refresh page title and stories' summaries, when language is switched.

--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -6,6 +6,12 @@
   },
   "female" : "Женский",
   "female-short" : "ж.",
+  "instant-summary" : {
+    "story" : {
+      "reaction-added" : "{reactions} ваш пост {heading}"
+    },
+    "supported" : "одобрил"
+  },
   "male" : "Мужской",
   "male-short" : "м.",
   "reaction-title" : {
