Updated Russian translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -299,7 +299,7 @@
     "nobody" : "Nobody",
     "only-me" : "Only me",
     "public" : "Everybody",
-    "signed" : "Signed"
+    "signed" : "Signed in"
   },
   "profile" : "Profile",
   "profile-edited-conflict" : "Profile was edited by somebody.",
