--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -1,5 +1,38 @@
 {
+  "add-comment" : "Отправить",
+  "add-comments-need" : "Чтобы комментировать, вам нужно <0>{signup}</0> или <1>{connect}</1>",
+  "add-connection" : "Добавить соединение",
+  "add-donation" : "Добавить донат",
+  "add-donation-button" : "Добавить донат",
+  "additional" : "Дополнительные",
+  "addons-changed-conflict" : "Список дополнений был изменён.",
+  "alert-text" : "Текст предупреждения",
+  "align" : "Выравнивание",
+  "all" : "Все",
+  "allowed-oppose-reactions" : "Разрешённые одобрительные реакции",
+  "allowed-support-reactions" : "Разрешённые неодобрительные реакции",
+  "alt-text" : "Альтернативный текст",
+  "alt-text-button" : "Альт. текст",
+  "auto" : "Авто",
+  "auto-hide-comments" : "Автоматически скрывать комментарии",
+  "avatar" : "Аватар",
+  "avatar-placeholder" : "Место для аватара",
+  "avatar-shape" : "Форма аватара",
+  "back-to-feed" : "← {feed}",
+  "bio" : "О себе",
+  "bold" : "Полужирный",
+  "bottom" : "В начало",
   "cancel" : "Отмена",
+  "caption" : "Заголовок",
+  "change" : "Изменить",
+  "change-date-time" : "Изменить дату/время",
+  "change-date-time-ellipsis" : "Изменить дату/время...",
+  "change-home-password" : "Изменить домашний пароль",
+  "change-password" : "Изменить пароль",
+  "change-password-ellipsis" : "Изменить пароль...",
+  "client-settings-changed-conflict" : "Настройки клиента были кем-то изменены.",
+  "clipboard-contains-formatting" : "Буфер обмена содержит текст с форматированием. Вставить текст с тегами форматирования?",
+  "close" : "Закрыть",
   "feed-title" : {
     "news" : "Новости",
     "timeline" : "Хроника"
@@ -15,6 +48,14 @@
   "language" : "Язык",
   "male" : "Мужской",
   "male-short" : "м.",
+  "principal-title" : {
+    "admin" : "Администратору",
+    "author" : "Автору",
+    "nobody" : "Никому",
+    "only-me" : "Только мне",
+    "public" : "Для всех",
+    "signed" : "Зарегистрированным"
+  },
   "reaction-title" : {
     "absurd" : "Абсурд",
     "angry" : "Бесит",
