Updated Russian translation.

--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -33,6 +33,78 @@
   "client-settings-changed-conflict" : "Настройки клиента были кем-то изменены.",
   "clipboard-contains-formatting" : "Буфер обмена содержит текст с форматированием. Вставить текст с тегами форматирования?",
   "close" : "Закрыть",
+  "comment-button" : "Комментировать",
+  "comment-edited-conflict" : "Комментарий был кем-то изменён.",
+  "commenting-allowed-to" : "Комментирование разрешено",
+  "comments" : "Комментарии",
+  "comments-disabled" : "Комментарии отключены",
+  "comments-visible-to" : "Комментарии видны",
+  "comment-updated-at" : "изменён",
+  "compress-images" : "Сжимать картинки",
+  "confirm-password" : "Подтверждение пароля",
+  "connect" : "Подключиться",
+  "connected" : "Подключён",
+  "connect-home" : "Подключиться к дому",
+  "connecting" : "Подключение",
+  "continue-reading" : "Читать дальше →",
+  "copy" : "Копировать",
+  "copy-image-from-internet" : "Копировать картинку из Интернета",
+  "copy-image-link" : "Копировать ссылку на картинку",
+  "copy-link" : "Копировать ссылку",
+  "copy-quote" : "Копировать цитату",
+  "copy-text" : "Копировать текст",
+  "copy-with-formatting" : "Копировать текст с форматированием",
+  "count-comments" : "{count} {count, plural, one {комментарий} few {комментария} other {комментариев}}",
+  "count-more" : "Ещё {count}",
+  "count-new" : "{count} {count, plural, one {новый} other {новых}}",
+  "count-posts" : "<0>{count}</0> {count, plural, one {пост} few {поста} other {постов}}",
+  "count-subscribers" : "<0>{count}</0> {count, plural, one {подписчик} few {подписчика} other {подписчиков}}",
+  "count-subscriptions" : "<0>{count}</0> {count, plural, one {подписка} few {подписки} other {подписок}}",
+  "create" : "Создать",
+  "create-avatar" : "Создать аватар",
+  "create-blog" : "Создать блог",
+  "created-at" : "Создан:",
+  "create-token" : "Создать токен",
+  "current" : "Текущий",
+  "current-password" : "Текущий пароль",
+  "delete" : "Удалить",
+  "delete-comment" : "Вы действительно хотите удалить комментарий \"{heading}\"?",
+  "delete-draft" : "Удалить черновик",
+  "deleting" : "Удаление...",
+  "description" : "Описание",
+  "disconnect" : "Отключиться",
+  "discussion-closed" : "Обсуждение закрыто",
+  "domain" : "Домен",
+  "domain-already-taken" : "Домен уже занят",
+  "domain-too-short" : "Слишком короткий, должен быть минимум 4 символа",
+  "donate" : "Донат",
+  "donate-to-recipient" : "Донаты для <0>{recipientName}</0>",
+  "donations-android-prohibited" : "Функция донатов запрещена в приложениях для Android, загруженных из Google Play, в соответствии с <0>Политикой платежей Google Play</0>.<1/><2/> Пожалуйста, используйте веб-клиент Moera для этого.",
+  "dont-ask-next-time" : "Не спрашивать следующий раз",
+  "download" : "Скачать",
+  "downloading-image" : "Скачивание картинки...",
+  "do-you-have-blog" : "У вас есть блог на Moera?",
+  "drafts" : "Черновики",
+  "draft-saved" : "Сохранено.",
+  "draft-saving" : "Сохранение...",
+  "duration-unit" : {
+    "format" : {
+      "always" : "всегда",
+      "day" : "{count} {count, plural, one {день} few {дня} other {дней}}",
+      "hour" : "{count} {count, plural, one {час} few {часа} other {часов}}",
+      "min" : "{count} мин",
+      "never" : "никогда",
+      "sec" : "{count} сек"
+    },
+    "name" : {
+      "always" : "всегда",
+      "day" : "дней",
+      "hour" : "часов",
+      "min" : "минут",
+      "never" : "никогда",
+      "sec" : "секунд"
+    }
+  },
   "feed-title" : {
     "news" : "Новости",
     "timeline" : "Хроника"
