--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -105,17 +105,114 @@
       "sec" : "секунд"
     }
   },
+  "edit" : "Редактировать",
+  "edit-comment" : "Редактировать комментарий",
+  "edit-donation" : "Редактировать донат",
+  "edit-ellipsis" : "Редактировать...",
+  "edit-image" : "Редактировать картинку",
+  "edit-link-preview" : "Редактировать предпросмотр ссылки",
+  "edit-post-title" : "Редактировать пост",
+  "edit-profile" : "Редактировать профиль",
+  "e-mail" : "E-mail",
+  "enable-oppose-reactions" : "Разрешить неодобрительные реакции",
+  "enable-reactions" : "Разрешить реакции",
+  "enter-name" : "Введите имя...",
+  "enter-text-here" : "Вводите текст тут...",
+  "expires" : "Годен до:",
+  "failure-reason" : "Причина неудачи",
   "feed-title" : {
     "news" : "Новости",
     "timeline" : "Хроника"
   },
   "female" : "Женский",
   "female-short" : "ж.",
+  "find-more-people" : "Найти ещё людей →",
+  "fold" : "Свернуть",
+  "follow-comments" : "Следить за комментариями",
+  "forget" : "Забыть",
+  "forget-changes" : "Вы действительно хотите забыть изменения?",
+  "forget-unfinished-comment" : "Вы действительно хотите забыть незавершенный комментарий?",
+  "forgot-home-password" : "Забыл домашний пароль",
+  "forgot-password" : "Забыл пароль",
+  "formatting-hint" : "<0>Markdown:</0> загляните в <1>шпаргалку</1> или <2>учебник</2>, чтобы узнать о других возможностях. См. также <3>шпаргалку по эмодзи</3>.",
+  "from-computer" : "С компьютера",
+  "from-device" : "С устройства",
+  "from-internet" : "Из Интернета",
+  "full-name" : "Полное имя",
+  "gender" : "Пол/гендер (выберите или напишите что угодно)",
+  "go" : "→",
+  "go-bottom" : "Перейти вниз",
+  "go-first-comment" : "Перейти к первому комментарию",
+  "go-last-comment" : "Перейти к последнему комментарию",
+  "go-to" : "Перейти...",
+  "go-top" : "Перейти вверх",
+  "height" : "Высота",
+  "hide" : "Скрыть",
+  "hide-my-subscription" : "Скрыть мою подписку",
+  "hide-subscription-to-me" : "Скрыть подписку на меня",
+  "image" : "Картинка",
+  "image-alignment" : {
+    "center" : "По центру",
+    "left" : "Слева",
+    "left-wrap" : "Слева, обтекание текстом",
+    "right" : "Справа",
+    "right-wrap" : "Справа, обтекание текстом"
+  },
+  "image-size" : {
+    "custom" : "Любой...",
+    "full" : "Полный",
+    "large" : "Большой",
+    "medium" : "Средний",
+    "small" : "Маленький",
+    "tiny" : "Крохотный"
+  },
+  "in" : "в",
+  "insert-image" : "Вставить картинку",
+  "insert-link" : "Вставить ссылку",
+  "insert-mention" : "Вставить упоминание",
+  "instants" : "Уведомления",
   "instant-summary" : {
-    "story" : {
-      "reaction-added" : "{reactions} ваш пост {heading}"
+    "and" : "и",
+    "and-others" : "и ещё {count}",
+    "in-node-blog" : "блоге {node}",
+    "in-their-blog" : "своём блоге",
+    "in-your-blog" : "вашем блоге",
+    "node-post" : "пост {node}",
+    "on-node-post" : "посту {node}",
+    "on-their-post" : "своему посту",
+    "on-your-post" : "вашему посту",
+    "opposed" : "{count, plural, =1 {возразил} other {возразили}} на",
+    "reason" : {
+      "comment" : "который вы прокомментировали",
+      "mention" : "в котором вас упомянули",
+      "user" : "на который вы подписаны"
     },
-    "supported" : "одобрил"
+    "story" : {
+      "comment-added" : "{comments} {count, plural, =1 {прокомментировал} other {прокомментировали}} ваш пост {heading}",
+      "comment-media-reaction-added" : "{reactions} картинку в вашем комментарии {heading} к {posting}",
+      "comment-media-reaction-failed" : "Не удалось подписать реакцию на картинку в комментарии {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
+      "comment-post-task-failed" : "Не удалось добавить комментарий к посту {node} {heading}",
+      "comment-reaction-added" : "{reactions} ваш комментарий {heading} к {posting}",
+      "comment-reaction-task-failed" : "Не удалось подписать реакцию на комментарий {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
+      "comment-update-task-failed" : "Не удалось подписать комментарий {commentHeading} к посту {node} {postingHeading}",
+      "mention-comment" : "{node} упомянул вас в комментарии {commentHeading} к {posting} {postingHeading}",
+      "mention-posting" : "{node} упомянул вас в посте {heading}",
+      "posting-media-reaction-added" : "{reactions} картинку в вашем посте {heading} в {node}",
+      "posting-media-reaction-failed" : "Не удалось подписать реакцию на картинку в посте {node} {heading}",
+      "posting-post-task-failed" : "Не удалось добавить ваш пост в блог {node}",
+      "posting-reaction-task-failed" : "Не удалось подписать реакцию на пост {node} {heading}",
+      "posting-subscribe-task-failed" : "Не удалось подписаться на комментарии к посту {node} {heading}",
+      "posting-updated" : "{node} обновил свой пост {heading}",
+      "posting-update-task-failed" : "Не удалось подписать ваш пост {heading} в блоге {node}",
+      "reaction-added" : "{reactions} ваш пост {heading}",
+      "remote-comment-added" : "{comments} {count, plural, =1 {прокомментировал} other {прокомментировали}} {posting} {reason} {heading}",
+      "reply-comment" : "{replies} {count, plural, =1 {ответил} other {ответили}} на ваш комментарий {heading} к {posting}",
+      "subscriber-added" : "{node} подписался на вашу ленту {feed}",
+      "subscriber-deleted" : "{node} отписался от вашей ленты {feed}"
+    },
+    "supported" : "{count, plural, =1 {одобрил} other {одобрили}}",
+    "their-post" : "свой пост",
+    "your-post" : "ваш пост"
   },
   "language" : "Язык",
   "male" : "Мужской",
