Updated Russian translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -147,6 +147,7 @@
   "go-to" : "Go to...",
   "go-top" : "Go to the top",
   "height" : "Height",
+  "help" : "Help",
   "hide" : "Hide",
   "hide-my-subscription" : "Hide my subscription",
   "hide-subscription-to-me" : "Hide subscription to me",
@@ -243,9 +244,8 @@
   "name-already-taken" : "Name is already taken. Note that you can add any number to the name (like 'Arthur_42')",
   "name-help" : "The name must be 4 - 120 characters long. You may use any Unicode character (including non-Latin alphabets), except whitespace and punctuation. Only this punctuation is allowed:",
   "name-not-allowed" : "Name is not allowed",
-  "name-or-node-url" : "Name or node URL",
-  "name-or-node-url-not-valid" : "Name or node URL is not valid",
-  "name-taken" : "Name is already taken",
+  "name-or-node-url" : "Blog name or URL",
+  "name-or-node-url-not-valid" : "Blog name or URL is not valid",
   "new-password" : "New password",
   "new-post-button" : "New post",
   "new-post-item" : "New post",
@@ -255,7 +255,7 @@
   "no" : "No",
   "no-actions" : "No actions",
   "no-addons" : "No add-ons loaded.",
-  "node-settings-changed-conflict" : "Node settings were changed by somebody.",
+  "node-settings-changed-conflict" : "Blog settings were changed by somebody.",
   "no-name-known" : "no name known",
   "no-name-set" : "no name set",
   "not-allowed" : "Not allowed",
@@ -290,7 +290,7 @@
   "pinned-post" : "Pinned post",
   "post-button" : "Post",
   "post-edited-conflict" : "The post was edited by somebody.",
-  "posting-not-found" : "Posting not found or cannot be displayed.",
+  "posting-not-found" : "Post is not found or cannot be displayed.",
   "posting-updated-at" : "updated",
   "post-preview" : "Post Preview",
   "preserve-formatting" : "Preserve formatting",
@@ -378,7 +378,7 @@
   "resend-mail" : "Send mail again",
   "reset-password" : "Reset Password",
   "reset-password-hint-instructions" : "A message was sent to your E-mail address <b>{emailHint}</b> with a secret code needed to reset the password. Please enter it in the field below.",
-  "reset-password-instructions" : "To reset the password, please enter the name or the URL of your home node.",
+  "reset-password-instructions" : "To reset the password, please enter the name or the URL of your blog.",
   "reset-to-default" : "Reset to default",
   "retype-password" : "Please type the password again",
   "rotate-left" : "Rotate left",
@@ -391,7 +391,7 @@
   "selected-preferred" : "Selected are preferred",
   "set-as-default" : "Set as default",
   "set-by-admin" : "set by admin",
-  "set-by-post-owner" : "set by post owner",
+  "set-by-post-owner" : "set by post author",
   "set-home-password" : "Set Home Password",
   "set-password-and-connect" : "Set Password & Connect",
   "setting" : {
