--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -147,6 +147,7 @@
   "go-to" : "Перейти...",
   "go-top" : "Перейти вверх",
   "height" : "Высота",
+  "help" : "Помощь",
   "hide" : "Скрыть",
   "hide-my-subscription" : "Скрыть мою подписку",
   "hide-subscription-to-me" : "Скрыть подписку на меня",
@@ -214,9 +215,87 @@
     "their-post" : "свой пост",
     "your-post" : "ваш пост"
   },
+  "invitation-buttons" : "<0>Создать новый блог</0><1>или</1><2>Зайти в свой блог</2>",
+  "italic" : "Курсив",
   "language" : "Язык",
+  "last-post" : "последний",
+  "link" : "Ссылка",
+  "links" : "Ссылки",
+  "load-all-comments" : "Загрузить все комментарии",
+  "loading-preview" : "Загрузка предпросмотра",
+  "load-more" : "Загрузить ещё...",
+  "load-newer-posts" : "Загрузить новые посты",
+  "load-older-posts" : "Загрузить старые посты",
   "male" : "Мужской",
   "male-short" : "м.",
+  "mark-all-read" : "Все прочитаны",
+  "mark-read" : "Отметить как прочитанное",
+  "mark-unread" : "Отметить как непрочитанное",
+  "mention" : "Упомянуть",
+  "more-links" : "{count} {count, plural, one {ссылка} few {ссылки} other {ссылок}}",
+  "more-reactions" : "Ещё {remaining}",
+  "more-reactions-hidden" : "Ещё {remaining} {remaining, plural, one {скрытая} other {скрытых}}",
+  "must-not-empty" : "Обязательное поле",
+  "must-single-english-word" : "Введите одно английское слово",
+  "mutually-subscribed" : "Взаимно подписаны",
+  "my-client" : "Мой клиент",
+  "my-node" : "Мой блог",
+  "name" : "Имя",
+  "name-already-taken" : "Имя уже занято. Но вы можете добавить к имени любое число (например, 'Arthur_42')",
+  "name-help" : "Имя должно быть длиной от 4 до 120 символов. Вы можете использовать любые символы юникода (включая буквы любого алфавита), кроме пробелов и знаков препинания. Разрешены только такие знаки препинания:",
+  "name-not-allowed" : "Недопустимое имя",
+  "name-or-node-url" : "Имя или URL блога",
+  "name-or-node-url-not-valid" : "Неверное имя или URL блога",
+  "new-password" : "Новый пароль",
+  "new-post-button" : "Написать",
+  "new-post-item" : "Новый пост",
+  "new-post-title" : "Новый пост",
+  "new-token-created" : "Создан новый токен",
+  "next-image" : "Следующая картинка",
+  "no" : "Нет",
+  "no-actions" : "Действий нет",
+  "no-addons" : "Нет загруженных дополнений.",
+  "node-settings-changed-conflict" : "Настройки блога были кем-то изменены.",
+  "no-name-known" : "имя неизвестно",
+  "no-name-set" : "имя не задано",
+  "not-allowed" : "Недопустимо",
+  "not-connected-home" : "Не подключён к дому",
+  "no-text" : "(без текста)",
+  "nothing-yet" : "Тут пока пусто.",
+  "notify-about-update" : "Уведомить подписчиков об обновлении",
+  "notify-followers" : "Уведомить подписчиков",
+  "not-valid-e-mail" : "Недопустимый адрес e-mail",
+  "ok" : "OK",
+  "only-selected-allowed" : "Разрешены только выбранные",
+  "only-selected-allowed-star-preferred" : "Разрешены только выбранные, а отмеченные <0/> предпочтительны",
+  "open" : "Открыть",
+  "operation-at" : "в",
+  "operation-status" : {
+    "added" : "Операция добавлена",
+    "failed" : "Операция не удалась",
+    "started" : "Операция запущена",
+    "succeeded" : "Операция удалась",
+    "unknown" : "Статус операции неизвестен",
+    "waiting" : "Операция в состоянии ожидания"
+  },
+  "oppose" : "Возражаю",
+  "original-deleted" : "Оригинал удалён {date}",
+  "password" : "Пароль",
+  "password-incorrect" : "Неверный пароль",
+  "password-not-set" : "Пароль ещё не установлен",
+  "passwords-different" : "Пароли различаются",
+  "paste-with-formatting" : "Вставить текст с форматированием",
+  "people" : "Люди",
+  "pin" : "Прикрепить",
+  "pinned-post" : "Прикреплённый",
+  "post-button" : "Опубликовать",
+  "post-edited-conflict" : "Пост был кем-то отредактирован.",
+  "posting-not-found" : "Пост не найден или не может быть показан.",
+  "posting-updated-at" : "изменён",
+  "post-preview" : "Предпросмотр поста",
+  "preserve-formatting" : "Сохранить форматирование",
+  "preview" : "Просмотр",
+  "previous-image" : "Предыдущая картинка",
   "principal-title" : {
     "admin" : "Администратору",
     "author" : "Автору",
@@ -225,6 +304,30 @@
     "public" : "Для всех",
     "signed" : "Зарегистрированным"
   },
+  "profile" : "Профиль",
+  "profile-edited-conflict" : "Профиль был кем-то отредактирован.",
+  "provider" : "Провайдер",
+  "provider-setting" : "(устанавливается провайдером)",
+  "qr-code" : "QR-код",
+  "quick-tips" : {
+    "blog-buttons-desktop" : "Для быстрого доступа к своему блогу используйте кнопки в правом верхнем углу:",
+    "blog-buttons-mobile" : "Для быстрого доступа к своему блогу используйте кнопки на нижней панели:",
+    "discover-blogs" : "Находите новые блоги в <0>списке блогов</0>.",
+    "new-post-desktop" : "Чтобы написать пост, нажмите на кнопку <0/> в правом верхнем углу.",
+    "new-post-mobile" : "Чтобы написать пост, нажмите на кнопку <0/> на нижней панели.",
+    "subscribe" : "Чтобы подписаться на блог, откройте его и нажмите на кнопку <0/>.",
+    "title" : "Советы",
+    "visit-desktop" : "Чтобы зайти в чей-то блог, нажмите на <0/> в левом верхнем углу и наберите имя блога.",
+    "visit-mobile" : "Чтобы зайти в чей-то блог, нажмите на <0/> на верхней панели и наберите имя блога.",
+    "your-news" : "ваша лента Новостей;",
+    "your-notifications" : "ваши Уведомления;",
+    "your-settings" : "ваши Настройки;",
+    "your-timeline" : "ваша Хроника."
+  },
+  "quote" : "Цитата",
+  "quote-copied" : "Цитата скопирована в буфер обмена",
+  "reached-bottom" : "Вы пришли к началу",
+  "reactions" : "Реакции",
   "reaction-title" : {
     "absurd" : "Абсурд",
     "angry" : "Бесит",
@@ -261,6 +364,36 @@
     "too-long" : "Длинно",
     "wow" : "Ого"
   },
+  "read-more" : "Читать дальше...",
+  "received-mail" : "Уже получил письмо",
+  "register" : "Регистрация",
+  "register-different-name" : "Зарегистрировать другое имя",
+  "registered-name-secret" : "Секрет зарегистрированного имени",
+  "register-new-name" : "Регистрация нового имени",
+  "rename" : "Переименовать",
+  "rename-token" : "Переименовать токен",
+  "reply" : "Ответить",
+  "reply-ellipsis" : "Ответить...",
+  "reply-prev-comment" : "Ответ на предыдущий комментарий",
+  "resend-mail" : "Отправить письмо ещё раз",
+  "reset-password" : "Сброс пароля",
+  "reset-password-hint-instructions" : "На ваш адрес E-mail <b>{emailHint}</b> было отправлено сообщение с секретным кодом для сброса пароля. Пожалуйста, введите его в поле ниже.",
+  "reset-password-instructions" : "Чтобы сбросить пароль, пожалуйста, введите имя или URL вашего блога.",
+  "reset-to-default" : "Вернуть значение по умолчанию",
+  "retype-password" : "Пожалуйста, введите пароль еще раз",
+  "rotate-left" : "Повернуть влево",
+  "rotate-right" : "Повернуть вправо",
+  "save" : "Сохранить",
+  "secret-code" : "Секретный код",
+  "secret-words" : "Секретные слова",
+  "select-all" : "Выбрать все",
+  "selected-automatically" : "Выбирается автоматически",
+  "selected-preferred" : "Выбранные предпочтительны",
+  "set-as-default" : "Сделать значением по умолчанию",
+  "set-by-admin" : "установлено администратором",
+  "set-by-post-owner" : "установлено автором поста",
+  "set-home-password" : "Установка домашнего пароля",
+  "set-password-and-connect" : "Установить пароль и подключиться",
   "setting" : {
     "client" : {
       "mercy" : {
